# SPLIT_VIS2

./: .gitignore  CMakeLists.txt  README  results  run  run_z10z_contour  run_z10z_raw  run_z10zgaas_contour  run_z10zgaas_raw
SplitTool/: .config.swo  .config.swp  .config_test.swp  .splitToolkit.cpp.swo  .splitToolkit.cpp.swp  Makefile  config  config_contour  config_contour_z_10z  config_contour_z_10z_gaas  config_neighbors  config_raw  config_raw_z_10z  config_raw_z_10z_gaas  config_test  default.cfg  notes  splitToolkit.cpp  splitToolkit.cpp~  splitToolkit_displaylist.cpp  splitToolkit_tool.cpp  splitToolkit_withlocalcontour.cpp
SplitTool/ccStudyMain/: ccConfig  ccConfig_davinci  ccRender.cpp  ccStudy.cpp  log0  order0  order01  order0_copy  order0_new  task1
SplitTool/old/: splitToolkit.cpp
Vis/: .qdotParameters.h.swp  Makefile  qdotFile.cpp  qdotFile.h  qdotFunction.cpp  qdotFunction.h  qdotGUI.cpp  qdotGUI.h  qdotParameters.h  qdotVis.cpp  qdotVis.h
data/: data.cpp
libs/Alpha_shapes_3/: CMakeCache.txt  Makefile  cmake_install.cmake  ex_alpha_shapes_3.cpp
libs/ContourTree/: 1_2011_10_04.txt  3dheadQuarterScaleSmooth.txt  Array3D.h  Ball.cpp  Ball.h  BallAux.h  ColourSelectionPane.cpp  ColourSelectionPane.h  Component.h  ContourTree  ContourTree.vcxproj  ContourTree.vcxproj.filters  ContourTreePane.cpp  ContourTreePane.h  FollowCubeTables.cpp  FollowCubeTables.h  GLUTArcBall.cpp  GLUTArcBall.h  GLUTCheckBox.cpp  GLUTCheckBox.h  GLUTCheckableBox.cpp  GLUTCheckableBox.h  GLUTDebugGLCalls.cpp  GLUTDebugGLCalls.h  GLUTHorizPane.cpp  GLUTHorizPane.h  GLUTHorizSlider.cpp  GLUTHorizSlider.h  GLUTLabelledRadioButton.cpp  GLUTLabelledRadioButton.h  GLUTPane.cpp  GLUTPane.h  GLUTRadioButton.cpp  GLUTRadioButton.h  GLUTRadioGroup.cpp  GLUTRadioGroup.h  GLUTStaticText.cpp  GLUTStaticText.h  GLUTString.cpp  GLUTString.h  (+42 more)
libs/ContourTree/Ric/: Makefile  RicMesh.cpp  RicVolume.cpp  RicVolumeSet.cpp  gzio.c  znzlib.c  znzlib.h
libs/ContourTree/dot/: layout_0256.dot  layout_0256.txt
libs/ContourTree/notused/: ContourTree.cpp  main.cpp  spare_collapse.cpp  spare_flexible.cpp
libs/LU/: Makefile  lubksb.cpp  lubksb.h  ludcmp.cpp  ludcmp.h
libs/ann_1.1.1/: Makefile  lib
libs/ann_1.1.1/ann2fig/: ann2fig.cpp
libs/ann_1.1.1/src/: ANN.cpp  kd_dump.cpp
libs/ann_1.1.1/test/: ann_test.cpp
libs/color/: Spiral_Color_4.txt  main.cpp  spiralcolor
libs/dual_depth_peeling/: GLSLProgramObject.cpp  GLSLProgramObject.h  Makefile
libs/dual_depth_peeling/common/include/: nvMath.h  nvMatrix.h  nvQuaternion.h  nvSDKPath.h  nvVector.h
libs/dual_depth_peeling/common/nvModel/lib/: nvModel.lib  nvModeld.lib
libs/dual_depth_peeling/shaders/: .dual_peeling_peel_vertex.glsl.swp  .shade_fragment.glsl.swp  dual_peeling_peel_fragment.glsl  dual_peeling_peel_vertex.glsl  dual_peeling_peel_vertex.singlelight.glsl  shade_fragment.glsl
libs/glew-2.0.0/lib/: libGLEW.so.2.0.0
libs/glui-2.35/src/: glui.cpp  glui_control.cpp  glui_scrollbar.cpp  makefile
libs/glui-2.35/src/example/: .example5.cpp.swp  example6.cpp
libs/glui-2.35/src/include/GL/: glui.h
libs/jcUtil/: Makefile
libs/kmlocal-1.7.2/src/: KMdata.cpp  KMdata.h  KMfilterCenters.h  KMlocal.cpp  KMlocal.h  kmlsample.cpp
libs/kmlocal-1.7.2/test/: testMin.diff  testMin.tmp  testSamp.diff  testSamp.tmp
libs/libconfig-1.5/: Makefile  ac_config.h  config.status  libtool
libs/libconfig-1.5/doc/: Makefile
libs/libconfig-1.5/examples/: Makefile
libs/libconfig-1.5/examples/c/: Makefile
libs/libconfig-1.5/examples/c++/: Makefile
libs/libconfig-1.5/examples/c++/.deps/: example1.Po  example2.Po  example3.Po  example4.Po
libs/libconfig-1.5/examples/c/.deps/: example1.Po  example2.Po  example3.Po
libs/libconfig-1.5/lib/: Makefile  libconfig++.pc  libconfig.pc
libs/libconfig-1.5/lib/.deps/: libconfig___la-grammar.Plo  libconfig___la-libconfig.Plo  libconfig___la-libconfigcpp.Plo  libconfig___la-scanctx.Plo  libconfig___la-scanner.Plo  libconfig___la-strbuf.Plo  libconfig_la-grammar.Plo  libconfig_la-libconfig.Plo  libconfig_la-scanctx.Plo  libconfig_la-scanner.Plo  libconfig_la-strbuf.Plo
libs/libconfig-1.5/tests/: Makefile
libs/libconfig-1.5/tests/.deps/: libconfig_tests-tests.Po
libs/libconfig-1.5/tinytest/: Makefile
libs/libconfig-1.5/tinytest/.deps/: tinytest.Po
libs/quanVisLib/: -lANN  .svBarGlyph.h.swp  .svGlyph.cpp.swp  .svGlyph.h.swp  .svIcons.cpp.swp  .svList.cpp.swp  .svMagnitude.h.swp  .svMesh.cpp.swp  .svOutline.cpp.swp  .svPickingray.h.swp  .svQDOT.cpp.swp  .svQDOT.h.swp  .svSplitArrow.cpp.swp  .svSummaryGlyph.cpp.swo  .svSummaryGlyph.cpp.swp  .svUtil.cpp.swn  .svUtil.cpp.swo  .svUtil.cpp.swp  .svUtil.h.swm  .svUtil.h.swn  .svUtil.h.swo  .svUtil.h.swp  .svVectorField.cpp.swp  .svWidget.cpp.swp  .svWidget.h.swp  :q  CIEColor.cpp  CIEColor.h  GLSLProgramObject.cpp  GLSLProgramObject.h  Makefile  Makefile_backup  OSD.cpp  OSD.h  Timer.h  dual_depth_peeling.cpp  dual_depth_peeling.h  ivLine.cpp  ivLine.h  ivTrackball.cpp  (+114 more)
libs/quanVisLib/notused/: svArrowGlyph.Jian.h  svArrowGlyph.h
preprocessing/: data.cpp  qdot_grid_40.txt
preprocessing/addcolumn/: data.cpp  svRegion.cpp
preprocessing/generateSymmetry/: genSymmetry.cpp  genSymmetry.h
preprocessing/generateVTK/: .genVTK.cpp.swo  .genVTK.cpp.swp  .genVTKfromOrg.cpp.swo  .genVTKfromOrg.cpp.swp  genVTK.cpp  genVTKfromOrg.cpp  genVTKfromOrg.cpp~  genVTKfromOrg.h
preprocessing/generatecontour/: input  main.cpp  output  svContour.cpp  svContour.h
preprocessing/old/generateVTK/: README  genVTK.cpp  genVTKfromOrg.cpp  input
preprocessing/old/generatecontour/: svContour.h
